--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 10:41:16 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 10:41:59 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -168,8 +168,8 @@ E thru 6</td>
 -1 thru 2</td>
       <td class="greyout leftborder">Viktor Hovland(W) E
 Not started</td>
-      <td class="greyout">Sam Burns +4
-+1 thru 1</td>
+      <td class="greyout">Sam Burns +3
+E thru 2</td>
     </tr>
     <tr>
       <td class="bigbold">Paxton Watson</td>
@@ -232,8 +232,8 @@ E thru 6</td>
 E thru 1</td>
       <td class="greyout leftborder">Viktor Hovland E
 Not started</td>
-      <td class="greyout">Jon Rahm(W) +2
-Not started</td>
+      <td class="greyout">Jon Rahm(W) +1
+-1 thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Luke Watson</td>
@@ -310,8 +310,8 @@ E thru 6</td>
 E thru 3</td>
       <td>Will Zalatoris -1
 E thru 1</td>
-      <td class="greyout leftborder">Jon Rahm(W) +2
-Not started</td>
+      <td class="greyout leftborder">Jon Rahm(W) +1
+-1 thru 1</td>
       <td class="greyout">Xander Schauffele +2
 Not started</td>
     </tr>
@@ -326,10 +326,10 @@ Not started</td>
 E thru 6</td>
       <td>Viktor Hovland E
 Not started</td>
-      <td class="greyout leftborder">Jon Rahm +2
-Not started</td>
-      <td class="greyout">Sam Burns +4
-+1 thru 1</td>
+      <td class="greyout leftborder">Jon Rahm +1
+-1 thru 1</td>
+      <td class="greyout">Sam Burns +3
+E thru 2</td>
     </tr>
     <tr>
       <td class="bigbold">Uphill into the Wind</td>
@@ -364,6 +364,38 @@ Not started</td>
 Not started</td>
     </tr>
     <tr>
+      <td class="bigbold">Don Shaw</td>
+      <td class="bigbold">-6</td>
+      <td>Cameron Smith -4
+Not started</td>
+      <td>Corey Conners -2
+E thru 6</td>
+      <td>Tiger Woods -1
+Not started</td>
+      <td>Jon Rahm(W) +1
+-1 thru 1</td>
+      <td class="greyout leftborder">Xander Schauffele +2
+Not started</td>
+      <td class="greyout">Sam Burns +3
+E thru 2</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Santorini Sunrises</td>
+      <td class="bigbold">-6</td>
+      <td>Cameron Smith -4
+Not started</td>
+      <td>Corey Conners(W) -2
+E thru 6</td>
+      <td>Will Zalatoris -1
+E thru 1</td>
+      <td>Jon Rahm +1
+-1 thru 1</td>
+      <td class="greyout leftborder">Jordan Spieth +2
+Not started</td>
+      <td class="greyout">Brooks Koepka +3
+Not started</td>
+    </tr>
+    <tr>
       <td class="bigbold">BCREAMED</td>
       <td class="bigbold">-6</td>
       <td>Cameron Smith(W) -4
@@ -372,10 +404,10 @@ Not started</td>
 Not started</td>
       <td>Patrick Cantlay -2
 Not started</td>
-      <td>Brooks Koepka +3
+      <td>Sam Burns +3
+E thru 2</td>
+      <td class="greyout leftborder">Brooks Koepka +3
 Not started</td>
-      <td class="greyout leftborder">Sam Burns +4
-+1 thru 1</td>
       <td class="greyout">Louis Oosthuizen +4
 Not started</td>
     </tr>
@@ -390,10 +422,10 @@ Not started</td>
 E thru 6</td>
       <td>Rory McIlroy +1
 Not started</td>
-      <td class="greyout leftborder">Robert MacIntyre +2
+      <td class="greyout leftborder">Jon Rahm +1
+-1 thru 1</td>
+      <td class="greyout">Robert MacIntyre +2
 +1 thru 7</td>
-      <td class="greyout">Jon Rahm +2
-Not started</td>
     </tr>
     <tr>
       <td class="bigbold">The Resort</td>
@@ -408,8 +440,8 @@ Not started</td>
 Not started</td>
       <td class="greyout leftborder">Shane Lowry +1
 Not started</td>
-      <td class="greyout">Jon Rahm +2
-Not started</td>
+      <td class="greyout">Jon Rahm +1
+-1 thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Ron Harrington</td>
@@ -422,41 +454,25 @@ E thru 6</td>
 Not started</td>
       <td>Hideki Matsuyama E
 Not started</td>
-      <td class="greyout leftborder">Jon Rahm(W) +2
-Not started</td>
+      <td class="greyout leftborder">Jon Rahm(W) +1
+-1 thru 1</td>
       <td class="greyout">Brooks Koepka +3
 Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">Don Shaw</td>
+      <td class="bigbold">Matt Wilson</td>
       <td class="bigbold">-5</td>
-      <td>Cameron Smith -4
+      <td>Scottie Scheffler(W) -3
 Not started</td>
       <td>Corey Conners -2
 E thru 6</td>
-      <td>Tiger Woods -1
-Not started</td>
-      <td>Jon Rahm(W) +2
-Not started</td>
-      <td class="greyout leftborder">Xander Schauffele +2
-Not started</td>
-      <td class="greyout">Sam Burns +4
-+1 thru 1</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Santorini Sunrises</td>
-      <td class="bigbold">-5</td>
-      <td>Cameron Smith -4
-Not started</td>
-      <td>Corey Conners(W) -2
-E thru 6</td>
       <td>Will Zalatoris -1
 E thru 1</td>
-      <td>Jon Rahm +2
+      <td>Jon Rahm +1
+-1 thru 1</td>
+      <td class="greyout leftborder">Xander Schauffele +2
 Not started</td>
-      <td class="greyout leftborder">Jordan Spieth +2
-Not started</td>
-      <td class="greyout">Brooks Koepka +3
+      <td class="greyout">Jordan Spieth +2
 Not started</td>
     </tr>
     <tr>
@@ -534,25 +550,25 @@ Not started</td>
 Not started</td>
       <td>Rory McIlroy(W) +1
 Not started</td>
-      <td class="greyout leftborder">Jon Rahm +2
-Not started</td>
+      <td class="greyout leftborder">Jon Rahm +1
+-1 thru 1</td>
       <td class="greyout">Jordan Spieth +2
 Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">Matt Wilson</td>
+      <td class="bigbold">Barb Wellard</td>
       <td class="bigbold">-4</td>
-      <td>Scottie Scheffler(W) -3
+      <td>Cameron Smith -4
 Not started</td>
-      <td>Corey Conners -2
-E thru 6</td>
-      <td>Will Zalatoris -1
-E thru 1</td>
-      <td>Jon Rahm +2
+      <td>Joaquin Niemann -3
 Not started</td>
-      <td class="greyout leftborder">Xander Schauffele +2
+      <td>Jon Rahm(W) +1
+-1 thru 1</td>
+      <td>Xander Schauffele +2
 Not started</td>
-      <td class="greyout">Jordan Spieth +2
+      <td class="greyout leftborder">Sam Burns +3
+E thru 2</td>
+      <td class="greyout">Brooks Koepka +3
 Not started</td>
     </tr>
     <tr>
@@ -604,6 +620,22 @@ Not started</td>
 Not started</td>
     </tr>
     <tr>
+      <td class="bigbold">Matt Tummon</td>
+      <td class="bigbold">-4</td>
+      <td>Dustin Johnson -3
+E thru 1</td>
+      <td>Patrick Cantlay -2
+Not started</td>
+      <td>Viktor Hovland E
+Not started</td>
+      <td>Jon Rahm +1
+-1 thru 1</td>
+      <td class="greyout leftborder">Jordan Spieth(W) +2
+Not started</td>
+      <td class="greyout">Brooks Koepka +3
+Not started</td>
+    </tr>
+    <tr>
       <td class="bigbold">Jack Fleck</td>
       <td class="bigbold">-4</td>
       <td>Cameron Smith -4
@@ -632,8 +664,8 @@ Not started</td>
 Not started</td>
       <td class="greyout leftborder">Brian Harman +2
 Not started</td>
-      <td class="greyout">Sam Burns +4
-+1 thru 1</td>
+      <td class="greyout">Sam Burns +3
+E thru 2</td>
     </tr>
     <tr>
       <td class="bigbold">Walk 1</td>
@@ -646,26 +678,10 @@ E thru 1</td>
 Not started</td>
       <td>Collin Morikawa E
 -1 thru 1</td>
-      <td class="greyout leftborder">Jon Rahm +2
-Not started</td>
+      <td class="greyout leftborder">Jon Rahm +1
+-1 thru 1</td>
       <td class="greyout">Xander Schauffele +2
 Not started</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Barb Wellard</td>
-      <td class="bigbold">-3</td>
-      <td>Cameron Smith -4
-Not started</td>
-      <td>Joaquin Niemann -3
-Not started</td>
-      <td>Jon Rahm(W) +2
-Not started</td>
-      <td>Xander Schauffele +2
-Not started</td>
-      <td class="greyout leftborder">Brooks Koepka +3
-Not started</td>
-      <td class="greyout">Sam Burns +4
-+1 thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Grace</td>
@@ -692,27 +708,43 @@ Not started</td>
 Not started</td>
       <td>Bubba Watson E
 -1 thru 4</td>
-      <td>Rory McIlroy +1
-Not started</td>
-      <td class="greyout leftborder">Jon Rahm(W) +2
+      <td>Jon Rahm(W) +1
+-1 thru 1</td>
+      <td class="greyout leftborder">Rory McIlroy +1
 Not started</td>
       <td class="greyout">Jordan Spieth +2
 Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">Matt Tummon</td>
-      <td class="bigbold">-3</td>
-      <td>Dustin Johnson -3
-E thru 1</td>
+      <td class="bigbold">Al Shulman</td>
+      <td class="bigbold">-2</td>
       <td>Patrick Cantlay -2
+Not started</td>
+      <td>Daniel Berger -1
 Not started</td>
       <td>Viktor Hovland E
 Not started</td>
-      <td>Jordan Spieth(W) +2
+      <td>Jon Rahm +1
+-1 thru 1</td>
+      <td class="greyout leftborder">Xander Schauffele +2
 Not started</td>
-      <td class="greyout leftborder">Jon Rahm +2
+      <td class="greyout">Justin Thomas(W) +4
 Not started</td>
-      <td class="greyout">Brooks Koepka +3
+    </tr>
+    <tr>
+      <td class="bigbold">Chris Sinclair</td>
+      <td class="bigbold">-2</td>
+      <td>Corey Conners(W) -2
+E thru 6</td>
+      <td>Daniel Berger -1
+Not started</td>
+      <td>Collin Morikawa E
+-1 thru 1</td>
+      <td>Jon Rahm +1
+-1 thru 1</td>
+      <td class="greyout leftborder">Robert MacIntyre +2
++1 thru 7</td>
+      <td class="greyout">Jordan Spieth +2
 Not started</td>
     </tr>
     <tr>
@@ -748,20 +780,52 @@ Not started</td>
 Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">Al Shulman</td>
+      <td class="bigbold">Neville Spillman</td>
+      <td class="bigbold">-2</td>
+      <td>Scottie Scheffler -3
+Not started</td>
+      <td>Patrick Cantlay -2
+Not started</td>
+      <td>Jon Rahm +1
+-1 thru 1</td>
+      <td>Jordan Spieth(W) +2
+Not started</td>
+      <td class="greyout leftborder">Sam Burns +3
+E thru 2</td>
+      <td class="greyout">Brooks Koepka +3
+Not started</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Shane Tummon</td>
+      <td class="bigbold">-2</td>
+      <td>Patrick Cantlay -2
+Not started</td>
+      <td>Tony Finau -1
+Not started</td>
+      <td>Collin Morikawa E
+-1 thru 1</td>
+      <td>Jon Rahm(W) +1
+-1 thru 1</td>
+      <td class="greyout leftborder">Jordan Spieth +2
+Not started</td>
+      <td class="greyout">Brooks Koepka +3
+Not started</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Shane Hosegood</td>
       <td class="bigbold">-1</td>
       <td>Patrick Cantlay -2
 Not started</td>
-      <td>Daniel Berger -1
+      <td>Collin Morikawa(W) E
+-1 thru 1</td>
+      <td>Hideki Matsuyama E
 Not started</td>
-      <td>Viktor Hovland E
+      <td>Jon Rahm +1
+-1 thru 1</td>
+      <td class="greyout leftborder">Jordan Spieth +2
 Not started</td>
-      <td>Jon Rahm +2
-Not started</td>
-      <td class="greyout leftborder">Xander Schauffele +2
-Not started</td>
-      <td class="greyout">Justin Thomas(W) +4
-Not started</td>
+      <td class="greyout">Paul Casey
+Out With Injury</td>
     </tr>
     <tr>
       <td class="bigbold">Philip Dale</td>
@@ -780,68 +844,52 @@ Not started</td>
 Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">Chris Sinclair</td>
+      <td class="bigbold">Jabby</td>
       <td class="bigbold">-1</td>
-      <td>Corey Conners(W) -2
+      <td>Corey Conners -2
 E thru 6</td>
-      <td>Daniel Berger -1
+      <td>Will Zalatoris -1
+E thru 1</td>
+      <td>Rory McIlroy +1
 Not started</td>
-      <td>Collin Morikawa E
+      <td>Jon Rahm +1
 -1 thru 1</td>
-      <td>Robert MacIntyre +2
-+1 thru 7</td>
-      <td class="greyout leftborder">Jon Rahm +2
+      <td class="greyout leftborder">Brooks Koepka +3
 Not started</td>
-      <td class="greyout">Jordan Spieth +2
+      <td class="greyout">Justin Thomas(W) +4
 Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">Neville Spillman</td>
+      <td class="bigbold">Fred Jamieson</td>
       <td class="bigbold">-1</td>
       <td>Scottie Scheffler -3
 Not started</td>
-      <td>Patrick Cantlay -2
+      <td>Viktor Hovland E
 Not started</td>
-      <td>Jordan Spieth(W) +2
-Not started</td>
-      <td>Jon Rahm +2
-Not started</td>
-      <td class="greyout leftborder">Brooks Koepka +3
-Not started</td>
-      <td class="greyout">Sam Burns +4
-+1 thru 1</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">-1</td>
-      <td>Patrick Cantlay -2
-Not started</td>
-      <td>Tony Finau -1
-Not started</td>
-      <td>Collin Morikawa E
+      <td>Jon Rahm(W) +1
 -1 thru 1</td>
-      <td>Jon Rahm(W) +2
+      <td>Rory McIlroy +1
 Not started</td>
-      <td class="greyout leftborder">Jordan Spieth +2
+      <td class="greyout leftborder">Xander Schauffele +2
 Not started</td>
       <td class="greyout">Brooks Koepka +3
 Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">Shane Hosegood</td>
+      <td class="bigbold">Chris Bryson</td>
       <td class="bigbold">0</td>
-      <td>Patrick Cantlay -2
+      <td>Scottie Scheffler -3
 Not started</td>
-      <td>Collin Morikawa(W) E
+      <td>Viktor Hovland E
+Not started</td>
+      <td>Jon Rahm(W) +1
 -1 thru 1</td>
-      <td>Hideki Matsuyama E
-Not started</td>
-      <td>Jon Rahm +2
+      <td>Xander Schauffele +2
 Not started</td>
       <td class="greyout leftborder">Jordan Spieth +2
 Not started</td>
-      <td class="greyout">Paul Casey
-Out With Injury</td>
+      <td class="greyout">Brooks Koepka +3
+Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Downhill Down Wind</td>
@@ -860,51 +908,19 @@ Not started</td>
 +4 thru 7</td>
     </tr>
     <tr>
-      <td class="bigbold">Jabby</td>
-      <td class="bigbold">0</td>
-      <td>Corey Conners -2
-E thru 6</td>
-      <td>Will Zalatoris -1
-E thru 1</td>
-      <td>Rory McIlroy +1
+      <td class="bigbold">Roy Jeffrey A</td>
+      <td class="bigbold">1</td>
+      <td>Patrick Cantlay -2
 Not started</td>
-      <td>Jon Rahm +2
+      <td>Hideki Matsuyama E
+Not started</td>
+      <td>Jon Rahm(W) +1
+-1 thru 1</td>
+      <td>Jordan Spieth +2
 Not started</td>
       <td class="greyout leftborder">Brooks Koepka +3
 Not started</td>
-      <td class="greyout">Justin Thomas(W) +4
-Not started</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Fred Jamieson</td>
-      <td class="bigbold">0</td>
-      <td>Scottie Scheffler -3
-Not started</td>
-      <td>Viktor Hovland E
-Not started</td>
-      <td>Rory McIlroy +1
-Not started</td>
-      <td>Jon Rahm(W) +2
-Not started</td>
-      <td class="greyout leftborder">Xander Schauffele +2
-Not started</td>
-      <td class="greyout">Brooks Koepka +3
-Not started</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Chris Bryson</td>
-      <td class="bigbold">1</td>
-      <td>Scottie Scheffler -3
-Not started</td>
-      <td>Viktor Hovland E
-Not started</td>
-      <td>Jon Rahm(W) +2
-Not started</td>
-      <td>Xander Schauffele +2
-Not started</td>
-      <td class="greyout leftborder">Jordan Spieth +2
-Not started</td>
-      <td class="greyout">Brooks Koepka +3
+      <td class="greyout">Justin Thomas +4
 Not started</td>
     </tr>
     <tr>
@@ -924,6 +940,22 @@ Not started</td>
 Not started</td>
     </tr>
     <tr>
+      <td class="bigbold">Glen Wilson</td>
+      <td class="bigbold">2</td>
+      <td>Will Zalatoris -1
+E thru 1</td>
+      <td>Viktor Hovland E
+Not started</td>
+      <td>Jon Rahm +1
+-1 thru 1</td>
+      <td>Jordan Spieth +2
+Not started</td>
+      <td class="greyout leftborder">Sam Burns +3
+E thru 2</td>
+      <td class="greyout">Justin Thomas(W) +4
+Not started</td>
+    </tr>
+    <tr>
       <td class="bigbold">NewCastle Magpies</td>
       <td class="bigbold">2</td>
       <td>Patrick Cantlay -2
@@ -940,45 +972,13 @@ Not started</td>
 Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">Roy Jeffrey A</td>
-      <td class="bigbold">2</td>
-      <td>Patrick Cantlay -2
-Not started</td>
-      <td>Hideki Matsuyama E
-Not started</td>
-      <td>Jon Rahm(W) +2
-Not started</td>
-      <td>Jordan Spieth +2
-Not started</td>
-      <td class="greyout leftborder">Brooks Koepka +3
-Not started</td>
-      <td class="greyout">Justin Thomas +4
-Not started</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Glen Wilson</td>
-      <td class="bigbold">3</td>
-      <td>Will Zalatoris -1
-E thru 1</td>
-      <td>Viktor Hovland E
-Not started</td>
-      <td>Jon Rahm +2
-Not started</td>
-      <td>Jordan Spieth +2
-Not started</td>
-      <td class="greyout leftborder">Justin Thomas(W) +4
-Not started</td>
-      <td class="greyout">Sam Burns +4
-+1 thru 1</td>
-    </tr>
-    <tr>
       <td class="bigbold">Brian McDonald</td>
-      <td class="bigbold">3</td>
+      <td class="bigbold">2</td>
       <td>Corey Conners -2
 E thru 6</td>
+      <td>Jon Rahm(W) +1
+-1 thru 1</td>
       <td>Rory McIlroy +1
-Not started</td>
-      <td>Jon Rahm(W) +2
 Not started</td>
       <td>Xander Schauffele +2
 Not started</td>
@@ -989,13 +989,13 @@ Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Kash Ahmad</td>
-      <td class="bigbold">3</td>
+      <td class="bigbold">2</td>
       <td>Will Zalatoris -1
 E thru 1</td>
       <td>Viktor Hovland E
 Not started</td>
-      <td>Jon Rahm(W) +2
-Not started</td>
+      <td>Jon Rahm(W) +1
+-1 thru 1</td>
       <td>Jordan Spieth +2
 Not started</td>
       <td class="greyout leftborder">Brooks Koepka +3
@@ -1005,13 +1005,13 @@ Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Hasbulla</td>
-      <td class="bigbold">3</td>
+      <td class="bigbold">2</td>
       <td>Patrick Cantlay(W) -2
 Not started</td>
       <td>Rory McIlroy +1
 Not started</td>
-      <td>Jon Rahm +2
-Not started</td>
+      <td>Jon Rahm +1
+-1 thru 1</td>
       <td>Xander Schauffele +2
 Not started</td>
       <td class="greyout leftborder">Brooks Koepka +3
@@ -1021,29 +1021,29 @@ Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Benjac</td>
-      <td class="bigbold">3</td>
+      <td class="bigbold">2</td>
       <td>Cameron Smith -4
 Not started</td>
       <td>Rory McIlroy +1
 Not started</td>
       <td>Xander Schauffele +2
 Not started</td>
-      <td>Justin Thomas(W) +4
+      <td>Sam Burns +3
+E thru 2</td>
+      <td class="greyout leftborder">Justin Thomas(W) +4
 Not started</td>
-      <td class="greyout leftborder">Sam Burns +4
-+1 thru 1</td>
       <td class="greyout">Justin Rose +6
 +2 thru 7</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">4</td>
+      <td class="bigbold">3</td>
       <td>Viktor Hovland(W) E
 Not started</td>
       <td>Collin Morikawa E
 -1 thru 1</td>
-      <td>Jon Rahm +2
-Not started</td>
+      <td>Jon Rahm +1
+-1 thru 1</td>
       <td>Patrick Reed +2
 E thru 4</td>
       <td class="greyout leftborder">Jordan Spieth +2
@@ -1053,11 +1053,11 @@ Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Yellow in Augusta</td>
-      <td class="bigbold">6</td>
+      <td class="bigbold">5</td>
       <td>Viktor Hovland E
 Not started</td>
-      <td>Jon Rahm +2
-Not started</td>
+      <td>Jon Rahm +1
+-1 thru 1</td>
       <td>Xander Schauffele +2
 Not started</td>
       <td>Jordan Spieth +2
@@ -1069,11 +1069,11 @@ Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Bryan Francis</td>
-      <td class="bigbold">6</td>
+      <td class="bigbold">5</td>
       <td>Viktor Hovland E
 Not started</td>
-      <td>Jon Rahm +2
-Not started</td>
+      <td>Jon Rahm +1
+-1 thru 1</td>
       <td>Xander Schauffele +2
 Not started</td>
       <td>Jordan Spieth +2
@@ -1085,11 +1085,11 @@ Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Tony Muir</td>
-      <td class="bigbold">7</td>
+      <td class="bigbold">6</td>
       <td>Viktor Hovland E
 Not started</td>
-      <td>Jon Rahm(W) +2
-Not started</td>
+      <td>Jon Rahm(W) +1
+-1 thru 1</td>
       <td>Xander Schauffele +2
 Not started</td>
       <td>Brooks Koepka +3
