--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 10:41:16 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 10:41:59 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -152,8 +152,8 @@ E thru 6</td>
 Not started</td>
       <td class="greyout leftborder">Jordan Spieth +2
 Not started</td>
-      <td class="greyout">Sam Burns +4
-+1 thru 1</td>
+      <td class="greyout">Sam Burns +3
+E thru 2</td>
     </tr>
     <tr>
       <td class="bigbold">Scott Williamson</td>
@@ -244,11 +244,27 @@ Not started</td>
 E thru 6</td>
       <td>Tyrrell Hatton -1
 -1 thru 2</td>
-      <td>Shane Lowry +1
-Not started</td>
-      <td class="greyout leftborder">Jon Rahm +2
+      <td>Jon Rahm +1
+-1 thru 1</td>
+      <td class="greyout leftborder">Shane Lowry +1
 Not started</td>
       <td class="greyout">Justin Thomas(W) +4
+Not started</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Matt Tummon</td>
+      <td class="bigbold">-4</td>
+      <td>Dustin Johnson -3
+E thru 1</td>
+      <td>Patrick Cantlay -2
+Not started</td>
+      <td>Viktor Hovland E
+Not started</td>
+      <td>Jon Rahm +1
+-1 thru 1</td>
+      <td class="greyout leftborder">Jordan Spieth(W) +2
+Not started</td>
+      <td class="greyout">Brooks Koepka +3
 Not started</td>
     </tr>
     <tr>
@@ -284,31 +300,15 @@ Not started</td>
 Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">Matt Tummon</td>
-      <td class="bigbold">-3</td>
-      <td>Dustin Johnson -3
-E thru 1</td>
-      <td>Patrick Cantlay -2
-Not started</td>
-      <td>Viktor Hovland E
-Not started</td>
-      <td>Jordan Spieth(W) +2
-Not started</td>
-      <td class="greyout leftborder">Jon Rahm +2
-Not started</td>
-      <td class="greyout">Brooks Koepka +3
-Not started</td>
-    </tr>
-    <tr>
       <td class="bigbold">Chris Bryson</td>
-      <td class="bigbold">-1</td>
+      <td class="bigbold">-2</td>
       <td>Scottie Scheffler(W) -3
 Not started</td>
       <td>Will Zalatoris -1
 E thru 1</td>
+      <td>Jon Rahm +1
+-1 thru 1</td>
       <td>Shane Lowry +1
-Not started</td>
-      <td>Jon Rahm +2
 Not started</td>
       <td class="greyout leftborder">Jordan Spieth +2
 Not started</td>
@@ -317,15 +317,15 @@ Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">-1</td>
+      <td class="bigbold">-2</td>
       <td>Patrick Cantlay -2
 Not started</td>
       <td>Tony Finau -1
 Not started</td>
       <td>Collin Morikawa E
 -1 thru 1</td>
-      <td>Jon Rahm(W) +2
-Not started</td>
+      <td>Jon Rahm(W) +1
+-1 thru 1</td>
       <td class="greyout leftborder">Jordan Spieth +2
 Not started</td>
       <td class="greyout">Brooks Koepka +3
@@ -333,15 +333,15 @@ Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Sinclair</td>
-      <td class="bigbold">-1</td>
+      <td class="bigbold">-2</td>
       <td>Corey Conners(W) -2
 E thru 6</td>
       <td>Daniel Berger -1
 Not started</td>
       <td>Collin Morikawa E
 -1 thru 1</td>
-      <td>Jon Rahm +2
-Not started</td>
+      <td>Jon Rahm +1
+-1 thru 1</td>
       <td class="greyout leftborder">Jordan Spieth +2
 Not started</td>
       <td class="greyout">Robert MacIntyre +2
@@ -365,13 +365,13 @@ Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">4</td>
+      <td class="bigbold">3</td>
       <td>Viktor Hovland(W) E
 Not started</td>
       <td>Collin Morikawa E
 -1 thru 1</td>
-      <td>Jon Rahm +2
-Not started</td>
+      <td>Jon Rahm +1
+-1 thru 1</td>
       <td>Patrick Reed +2
 E thru 4</td>
       <td class="greyout leftborder">Brooks Koepka +3
@@ -381,11 +381,11 @@ Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Adam Ryan</td>
-      <td class="bigbold">4</td>
+      <td class="bigbold">3</td>
       <td>Corey Conners -2
 E thru 6</td>
-      <td>Jon Rahm +2
-Not started</td>
+      <td>Jon Rahm +1
+-1 thru 1</td>
       <td>Xander Schauffele +2
 Not started</td>
       <td>Jordan Spieth +2
