--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 10:51:19 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 10:52:02 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -201,7 +201,7 @@ E thru 1</td>
       <td class="greyout leftborder">Viktor Hovland E
 Not started</td>
       <td class="greyout">Xander Schauffele(W) +2
-Not started</td>
+E thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">The Dub</td>
@@ -215,7 +215,7 @@ E thru 1</td>
       <td>Matthew Fitzpatrick -1
 Not started</td>
       <td class="greyout leftborder">Xander Schauffele +2
-Not started</td>
+E thru 1</td>
       <td class="greyout">Brooks Koepka +3
 Not started</td>
     </tr>
@@ -247,7 +247,7 @@ E thru 6</td>
       <td>Talor Gooch E
 Not started</td>
       <td class="greyout leftborder">Xander Schauffele +2
-Not started</td>
+E thru 1</td>
       <td class="greyout">Brooks Koepka +3
 Not started</td>
     </tr>
@@ -279,7 +279,7 @@ E thru 1</td>
       <td>Hideki Matsuyama E
 Not started</td>
       <td class="greyout leftborder">Xander Schauffele +2
-Not started</td>
+E thru 1</td>
       <td class="greyout">Jordan Spieth +2
 Not started</td>
     </tr>
@@ -313,7 +313,7 @@ E thru 1</td>
       <td class="greyout leftborder">Jon Rahm(W) +1
 -1 thru 1</td>
       <td class="greyout">Xander Schauffele +2
-Not started</td>
+E thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Lyle Rattray</td>
@@ -341,7 +341,7 @@ Not started</td>
       <td>Patrick Cantlay -2
 E thru 1</td>
       <td>Xander Schauffele +2
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Billy Horschel +3
 +1 thru 2</td>
       <td class="greyout">Brooks Koepka +3
@@ -357,7 +357,7 @@ Not started</td>
       <td>Patrick Cantlay -2
 E thru 1</td>
       <td>Xander Schauffele +2
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Adam Scott +2
 Not started</td>
       <td class="greyout">Brooks Koepka(W) +3
@@ -375,7 +375,7 @@ Not started</td>
       <td>Jon Rahm(W) +1
 -1 thru 1</td>
       <td class="greyout leftborder">Xander Schauffele +2
-Not started</td>
+E thru 1</td>
       <td class="greyout">Sam Burns +3
 E thru 2</td>
     </tr>
@@ -471,7 +471,7 @@ E thru 1</td>
       <td>Jon Rahm +1
 -1 thru 1</td>
       <td class="greyout leftborder">Xander Schauffele +2
-Not started</td>
+E thru 1</td>
       <td class="greyout">Jordan Spieth +2
 Not started</td>
     </tr>
@@ -485,7 +485,7 @@ E thru 1</td>
       <td>Will Zalatoris -1
 E thru 1</td>
       <td>Xander Schauffele +2
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Brooks Koepka +3
 Not started</td>
       <td class="greyout">Justin Thomas(W) +4
@@ -535,7 +535,7 @@ Not started</td>
       <td>Rory McIlroy +1
 Not started</td>
       <td class="greyout leftborder">Xander Schauffele +2
-Not started</td>
+E thru 1</td>
       <td class="greyout">Justin Thomas(W) +4
 Not started</td>
     </tr>
@@ -565,7 +565,7 @@ Not started</td>
       <td>Jon Rahm(W) +1
 -1 thru 1</td>
       <td>Xander Schauffele +2
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Sam Burns +3
 E thru 2</td>
       <td class="greyout">Brooks Koepka +3
@@ -581,7 +581,7 @@ E thru 6</td>
       <td>Viktor Hovland E
 Not started</td>
       <td>Xander Schauffele +2
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Jordan Spieth +2
 Not started</td>
       <td class="greyout">Justin Thomas +4
@@ -599,7 +599,7 @@ Not started</td>
       <td>Marc Leishman +2
 +1 thru 4</td>
       <td class="greyout leftborder">Xander Schauffele +2
-Not started</td>
+E thru 1</td>
       <td class="greyout">Justin Thomas +4
 Not started</td>
     </tr>
@@ -647,7 +647,7 @@ Not started</td>
       <td>Rory McIlroy(W) +1
 Not started</td>
       <td class="greyout leftborder">Xander Schauffele +2
-Not started</td>
+E thru 1</td>
       <td class="greyout">Justin Thomas +4
 Not started</td>
     </tr>
@@ -681,7 +681,7 @@ Not started</td>
       <td class="greyout leftborder">Jon Rahm +1
 -1 thru 1</td>
       <td class="greyout">Xander Schauffele +2
-Not started</td>
+E thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Grace</td>
@@ -697,7 +697,7 @@ Not started</td>
       <td class="greyout leftborder">Rory McIlroy +1
 Not started</td>
       <td class="greyout">Xander Schauffele(W) +2
-Not started</td>
+E thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Glitter Girl</td>
@@ -727,7 +727,7 @@ Not started</td>
       <td>Jon Rahm +1
 -1 thru 1</td>
       <td class="greyout leftborder">Xander Schauffele +2
-Not started</td>
+E thru 1</td>
       <td class="greyout">Justin Thomas(W) +4
 Not started</td>
     </tr>
@@ -835,7 +835,7 @@ Not started</td>
       <td>Patrick Cantlay -2
 E thru 1</td>
       <td>Xander Schauffele +2
-Not started</td>
+E thru 1</td>
       <td>Jordan Spieth +2
 Not started</td>
       <td class="greyout leftborder">Brooks Koepka +3
@@ -871,7 +871,7 @@ Not started</td>
       <td>Rory McIlroy +1
 Not started</td>
       <td class="greyout leftborder">Xander Schauffele +2
-Not started</td>
+E thru 1</td>
       <td class="greyout">Brooks Koepka +3
 Not started</td>
     </tr>
@@ -885,7 +885,7 @@ Not started</td>
       <td>Jon Rahm(W) +1
 -1 thru 1</td>
       <td>Xander Schauffele +2
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Jordan Spieth +2
 Not started</td>
       <td class="greyout">Brooks Koepka +3
@@ -931,7 +931,7 @@ Not started</td>
       <td>Will Zalatoris -1
 E thru 1</td>
       <td>Xander Schauffele +2
-Not started</td>
+E thru 1</td>
       <td>Brooks Koepka +3
 Not started</td>
       <td class="greyout leftborder">Justin Thomas(W) +4
@@ -963,7 +963,7 @@ E thru 1</td>
       <td>Collin Morikawa E
 -1 thru 2</td>
       <td>Xander Schauffele +2
-Not started</td>
+E thru 1</td>
       <td>Jordan Spieth +2
 Not started</td>
       <td class="greyout leftborder">Brooks Koepka +3
@@ -981,7 +981,7 @@ E thru 6</td>
       <td>Rory McIlroy +1
 Not started</td>
       <td>Xander Schauffele +2
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Jordan Spieth +2
 Not started</td>
       <td class="greyout">Justin Thomas +4
@@ -1013,7 +1013,7 @@ Not started</td>
       <td>Jon Rahm +1
 -1 thru 1</td>
       <td>Xander Schauffele +2
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Brooks Koepka +3
 Not started</td>
       <td class="greyout">Justin Thomas +4
@@ -1027,7 +1027,7 @@ Not started</td>
       <td>Rory McIlroy +1
 Not started</td>
       <td>Xander Schauffele +2
-Not started</td>
+E thru 1</td>
       <td>Sam Burns +3
 E thru 2</td>
       <td class="greyout leftborder">Justin Thomas(W) +4
@@ -1059,7 +1059,7 @@ Not started</td>
       <td>Jon Rahm +1
 -1 thru 1</td>
       <td>Xander Schauffele +2
-Not started</td>
+E thru 1</td>
       <td>Jordan Spieth +2
 Not started</td>
       <td class="greyout leftborder">Brooks Koepka +3
@@ -1075,7 +1075,7 @@ Not started</td>
       <td>Jon Rahm +1
 -1 thru 1</td>
       <td>Xander Schauffele +2
-Not started</td>
+E thru 1</td>
       <td>Jordan Spieth +2
 Not started</td>
       <td class="greyout leftborder">Justin Thomas(W) +4
@@ -1091,7 +1091,7 @@ Not started</td>
       <td>Jon Rahm(W) +1
 -1 thru 1</td>
       <td>Xander Schauffele +2
-Not started</td>
+E thru 1</td>
       <td>Brooks Koepka +3
 Not started</td>
       <td class="greyout leftborder">Louis Oosthuizen +4
