--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 10:51:19 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 10:52:02 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -149,7 +149,7 @@ Not started</td>
       <td>Corey Conners -2
 E thru 6</td>
       <td>Xander Schauffele +2
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Jordan Spieth +2
 Not started</td>
       <td class="greyout">Sam Burns +3
@@ -215,7 +215,7 @@ E thru 1</td>
       <td>Rory McIlroy +1
 Not started</td>
       <td class="greyout leftborder">Xander Schauffele +2
-Not started</td>
+E thru 1</td>
       <td class="greyout">Brooks Koepka +3
 Not started</td>
     </tr>
@@ -277,7 +277,7 @@ E thru 6</td>
       <td>Viktor Hovland E
 Not started</td>
       <td>Xander Schauffele +2
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Jordan Spieth +2
 Not started</td>
       <td class="greyout">Justin Thomas +4
@@ -355,7 +355,7 @@ E thru 1</td>
       <td>Corey Conners -2
 E thru 6</td>
       <td>Xander Schauffele(W) +2
-Not started</td>
+E thru 1</td>
       <td>Justin Thomas +4
 Not started</td>
       <td class="greyout leftborder">Louis Oosthuizen +4
@@ -387,7 +387,7 @@ E thru 6</td>
       <td>Jon Rahm +1
 -1 thru 1</td>
       <td>Xander Schauffele +2
-Not started</td>
+E thru 1</td>
       <td>Jordan Spieth +2
 Not started</td>
       <td class="greyout leftborder">Justin Thomas(W) +4
