--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 10:52:02 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 10:52:45 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -156,22 +156,6 @@ Not started</td>
 E thru 2</td>
     </tr>
     <tr>
-      <td class="bigbold">Scott Williamson</td>
-      <td class="bigbold">-7</td>
-      <td>Sungjae Im -5
-E thru 4</td>
-      <td>Patrick Cantlay -2
-E thru 1</td>
-      <td>Viktor Hovland(W) E
-Not started</td>
-      <td>Collin Morikawa E
--1 thru 2</td>
-      <td class="greyout leftborder">Brooks Koepka +3
-Not started</td>
-      <td class="greyout">Justin Thomas +4
-Not started</td>
-    </tr>
-    <tr>
       <td class="bigbold">Jon Hosegood</td>
       <td class="bigbold">-7</td>
       <td>Scottie Scheffler -3
@@ -188,17 +172,17 @@ Not started</td>
 Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">Paxton Watson</td>
-      <td class="bigbold">-6</td>
-      <td>Cameron Smith -4
-Not started</td>
-      <td>Joaquin Niemann -3
-Not started</td>
-      <td>Viktor Hovland E
-Not started</td>
-      <td>Rory McIlroy +1
-Not started</td>
-      <td class="greyout leftborder">Tommy Fleetwood(W) +3
+      <td class="bigbold">Scott Williamson</td>
+      <td class="bigbold">-5</td>
+      <td>Sungjae Im -5
+E thru 4</td>
+      <td>Patrick Cantlay -2
+E thru 1</td>
+      <td>Collin Morikawa E
+-1 thru 2</td>
+      <td>Viktor Hovland(W) +2
++2 thru 1</td>
+      <td class="greyout leftborder">Brooks Koepka +3
 Not started</td>
       <td class="greyout">Justin Thomas +4
 Not started</td>
@@ -252,33 +236,17 @@ Not started</td>
 Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">Matt Tummon</td>
+      <td class="bigbold">Paxton Watson</td>
       <td class="bigbold">-4</td>
-      <td>Dustin Johnson -3
-E thru 1</td>
-      <td>Patrick Cantlay -2
-E thru 1</td>
-      <td>Viktor Hovland E
+      <td>Cameron Smith -4
 Not started</td>
-      <td>Jon Rahm +1
--1 thru 1</td>
-      <td class="greyout leftborder">Jordan Spieth(W) +2
+      <td>Joaquin Niemann -3
 Not started</td>
-      <td class="greyout">Brooks Koepka +3
+      <td>Rory McIlroy +1
 Not started</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Neil Hardy</td>
-      <td class="bigbold">-4</td>
-      <td>Cameron Smith(W) -4
-Not started</td>
-      <td>Corey Conners -2
-E thru 6</td>
-      <td>Viktor Hovland E
-Not started</td>
-      <td>Xander Schauffele +2
-E thru 1</td>
-      <td class="greyout leftborder">Jordan Spieth +2
+      <td>Viktor Hovland +2
++2 thru 1</td>
+      <td class="greyout leftborder">Tommy Fleetwood(W) +3
 Not started</td>
       <td class="greyout">Justin Thomas +4
 Not started</td>
@@ -348,10 +316,42 @@ E thru 8</td>
 Not started</td>
     </tr>
     <tr>
+      <td class="bigbold">Matt Tummon</td>
+      <td class="bigbold">-2</td>
+      <td>Dustin Johnson -3
+E thru 2</td>
+      <td>Patrick Cantlay -2
+E thru 1</td>
+      <td>Jon Rahm +1
+-1 thru 1</td>
+      <td>Jordan Spieth(W) +2
+Not started</td>
+      <td class="greyout leftborder">Viktor Hovland +2
++2 thru 1</td>
+      <td class="greyout">Brooks Koepka +3
+Not started</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Neil Hardy</td>
+      <td class="bigbold">-2</td>
+      <td>Cameron Smith(W) -4
+Not started</td>
+      <td>Corey Conners -2
+E thru 6</td>
+      <td>Viktor Hovland +2
++2 thru 1</td>
+      <td>Xander Schauffele +2
+E thru 1</td>
+      <td class="greyout leftborder">Jordan Spieth +2
+Not started</td>
+      <td class="greyout">Justin Thomas +4
+Not started</td>
+    </tr>
+    <tr>
       <td class="bigbold">Jamie Watters</td>
       <td class="bigbold">1</td>
       <td>Dustin Johnson -3
-E thru 1</td>
+E thru 2</td>
       <td>Corey Conners -2
 E thru 6</td>
       <td>Xander Schauffele(W) +2
@@ -362,22 +362,6 @@ Not started</td>
 Not started</td>
       <td class="greyout">Russell Henley +4
 +3 thru 6</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">3</td>
-      <td>Viktor Hovland(W) E
-Not started</td>
-      <td>Collin Morikawa E
--1 thru 2</td>
-      <td>Jon Rahm +1
--1 thru 1</td>
-      <td>Patrick Reed +2
-E thru 5</td>
-      <td class="greyout leftborder">Brooks Koepka +3
-Not started</td>
-      <td class="greyout">Luke List +5
-Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Adam Ryan</td>
@@ -393,6 +377,22 @@ Not started</td>
       <td class="greyout leftborder">Justin Thomas(W) +4
 Not started</td>
       <td class="greyout">Louis Oosthuizen +4
+Not started</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Jeff Turnham</td>
+      <td class="bigbold">5</td>
+      <td>Collin Morikawa E
+-1 thru 2</td>
+      <td>Jon Rahm +1
+-1 thru 1</td>
+      <td>Viktor Hovland(W) +2
++2 thru 1</td>
+      <td>Patrick Reed +2
+E thru 5</td>
+      <td class="greyout leftborder">Brooks Koepka +3
+Not started</td>
+      <td class="greyout">Luke List +5
 Not started</td>
     </tr>
   </tbody>
